--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,12 +2,14 @@ atomicwrites==1.2.1
 attrs==18.2.0
 Click==7.0
 Flask==1.0.2
+Flask-JWT-Extended==3.15.0
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
 more-itertools==5.0.0
 pluggy==0.8.0
 py==1.7.0
+PyJWT==1.7.1
 pytest==4.1.0
 six==1.12.0
 Werkzeug==0.14.1
