--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ python:
 install:
   - pip install -r api/requirements.txt
 
+before_script: cd api
 script:
-  - pytest --cov=api/v1
+  - pytest --cov=v1
 
 after_success:
   - coveralls
