--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -8,6 +8,7 @@ coveralls==1.5.1
 docopt==0.6.2
 Flask==1.0.2
 Flask-JWT-Extended==3.15.0
+gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
