--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==4.1.0
 atomicwrites==1.2.1
 attrs==18.2.0
 certifi==2018.11.29
@@ -8,6 +9,7 @@ coveralls==1.5.1
 docopt==0.6.2
 Flask==1.0.2
 Flask-JWT-Extended==3.15.0
+Flask-RESTful==0.3.7
 gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
@@ -19,6 +21,7 @@ py==1.7.0
 PyJWT==1.7.1
 pytest==4.1.0
 pytest-cov==2.6.1
+pytz==2018.9
 requests==2.21.0
 six==1.12.0
 urllib3==1.24.1
